# Waveguide

./: CMakeLists.txt  Config.cpp  Config.h  README.md  main.cpp
scenario/: RotatedSpectrumRange.cpp  RotatedSpectrumRange.h  ScenarioCollection.cpp  ScenarioCollection.h  SimpleSpectrum.cpp  SimpleSpectrum.h  SimpleSpectrumRange.cpp  SimpleSpectrumRange.h
scenario/circular/: CircularSpectrum.cpp  CircularSpectrum.h
scenario/cylindrical/: CylindricalSpectrum.cpp  CylindricalSpectrum.h
scenario/grid/: GridSpectrum.cpp  GridSpectrum.h
scenario/help/: Help.cpp  Help.h
scenario/linear/: LinearSpectrum.cpp  LinearSpectrum.h  LinearTimeSpectrum.cpp  LinearTimeSpectrum.h
scenario/sphere/: SphereSpectrum.cpp  SphereSpectrum.h
sdr/: FrequencyBin.cpp  FrequencyBin.h  SampleThread.cpp  SampleThread.h  SpectrumSampler.cpp  SpectrumSampler.h  SpectrumSamples.cpp  SpectrumSamples.h  VectorSinkBlock.cpp  VectorSinkBlock.h
